--- a/render.yaml
+++ b/render.yaml
@@ -6,7 +6,7 @@ services:
     region: ohio
     envVars:
       - key: N8N_HOST
-        fromContext: instance_host
+        sync: false
       - key: N8N_PORT
         value: 5678
       - key: N8N_PROTOCOL
@@ -14,7 +14,7 @@ services:
       - key: NODE_ENV
         value: production
       - key: WEBHOOK_URL
-        fromContext: instance_host
+        sync: false
       - key: DB_TYPE
         value: postgresdb
       - key: DB_POSTGRESDB_DATABASE
